src/network/access/qnetworkaccesscache_p.h
@@ -79,6 +79,7 @@ public:
         QByteArray key;
         bool expires;
         bool shareable;
+        qint64 expiryTimeoutSeconds;
     public:
         CacheableObject();
         virtual ~CacheableObject();
@@ -95,7 +96,7 @@ public:
 
     void clear();
 
-    void addEntry(const QByteArray &key, CacheableObject *entry);
+    void addEntry(const QByteArray &key, CacheableObject *entry, qint64 connectionCacheExpiryTimeoutSeconds = -1);
     bool hasEntry(const QByteArray &key) const;
     bool requestEntry(const QByteArray &key, QObject *target, const char *member);
     CacheableObject *requestEntryNow(const QByteArray &key);
