src/network/access/qnetworkrequest.h
@@ -97,6 +97,7 @@ public:
         Http2DirectAttribute,
         ResourceTypeAttribute, // internal
         AutoDeleteReplyOnFinishAttribute,
+        ConnectionCacheExpiryTimeoutSecondsAttribute,
 
         User = 1000,
         UserMax = 32767
